--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 	
-    <title>מעבדת שאול</title>
+    <title>מעבדת אלקטרוניקה שאול</title>
   
   </head>
   
