--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 	
-    <title>מעבדת שאול</title>
+    	<title>מעבדת שאול</title>
   
+	<meta name="google-site-verification" content="T0Ff07w6YKao7h02d11pmZ41f_JiuRfnowjUNqB0PpA" />
   </head>
   
   <body data-spy="scroll" data-target="#nav" data-offset="250">
